Pull 2017 & Run Initial Analysis

--- a/GetSafetyData.ipynb
+++ b/GetSafetyData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_yr = 2018"
+    "min_yr = 2017"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,13 @@
       "FAIL: 2018 ACURA RLX SPORT HYBRID \n",
       "FAIL: 2018 MERCEDES-BENZ E-CLASS \n",
       "FAIL: 2018 MERCEDES-BENZ S-CLASS \n",
-      "FAIL: 2018 PORSCHE MACAN \n"
+      "FAIL: 2018 PORSCHE MACAN \n",
+      "FAIL: 2017 ACURA MDX SPORT HYBRID \n",
+      "FAIL: 2017 ACURA RLX SPORT HYBRID \n",
+      "FAIL: 2017 MERCEDES-BENZ CL-CLASS  \n",
+      "FAIL: 2017 MERCEDES-BENZ E-CLASS \n",
+      "FAIL: 2017 MERCEDES-BENZ S-CLASS \n",
+      "FAIL: 2017 PORSCHE MACAN \n"
      ]
     }
    ],
@@ -250,21 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FAIL: 2018 ACURA RLX SPORT HYBRID \n",
-      "FAIL: 2018 ACURA RLX SPORT HYBRID \n",
-      "FAIL: 2018 MERCEDES-BENZ E-CLASS \n",
-      "FAIL: 2018 MERCEDES-BENZ S-CLASS \n",
-      "FAIL: 2018 PORSCHE MACAN \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trims = pd.concat(list(raw_trims[raw_trims.status == 'success'].data))\n",
     "failed_models = raw_trims[raw_trims.status == 'fail']\n"
@@ -272,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -289,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
